# cam_ir_autocalibration

./: .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  ir_camera.hpp  optimizer.hpp  optimizer_types.hpp
src/: camera.cpp  ir_camera.cpp  main.cpp  optimizer.cpp  optimizer_types.cpp
